broken-link-fix-0602

--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md
@@ -83,7 +83,7 @@ The administrator can create a profile and apply it to a user. Then, logon failu
 
       By default, if you do not specify a profile when you create a user, the `DEFAULT` profile is used. You can query the `DBA_PROFILES` view for the settings of the `DEFAULT` profile.
 
-      For more information about the `CREATE USER` statement, see [CREATE USER](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md).****
+      For more information about the `CREATE USER` statement, see [CREATE USER](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md).
 
    * If a user has been created, modify the profile of the user to apply the created profile to the user.
 
@@ -164,7 +164,7 @@ The administrator can create a profile and apply it to a user. Then, logon failu
 
    <main id="notice" type='notice'>
    <h4>Notice</h4>
-   <p>If you log on as the administrator, you can directly lock and unlock users. If you log on as a regular user, you must have the global <code>ALTER USER</code> privilege to lock and unlock users. For information about how to view and grant user privileges, see <a href="../2.oracle-mode/4.view-user-permissions-of-oracle-mode.md">View user privileges</a> and <a href="../2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md">Modify user privileges</a>. </p>
+   <p>If you log on as the administrator, you can directly lock and unlock users. If you log on as a regular user, you must have the global <code>ALTER USER</code> privilege to lock and unlock users. For information about how to view and grant user privileges, see <a href="4.view-the-user-permissions-of-oracle-mode.md">View user privileges</a> and <a href="5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md">Modify user privileges</a>. </p>
    </main>
 
    ```sql
