--- a/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md
@@ -1,14 +1,14 @@
 # 创建 C 示例应用程序
 
-本文介绍了如何通过 OceanBase Connector/C 驱动连接并使用 OceanBase 数据库。
+本文介绍了如何通过 MySQL Connector/C (libmysqlclient) 驱动连接并使用 OceanBase 数据库。
 
 ## 前提条件
 
-在安装使用 OceanBase Connector/C 前请确保设置了基本的数据库开发环境，要求如下：
+在安装使用 MySQL Connector/C (libmysqlclient) 前请确保设置了基本的数据库开发环境，要求如下：
 
 * GCC 版本为 3.4.6 及以上，推荐使用 4.8.5 版本。
 
-* CMake 版本为 2.8.12 及以上.
+* CMake 版本为 2.8.12 及以上。
 
 ## 创建 C 应用程序
 
@@ -17,7 +17,7 @@
 联系 OceanBase 数据库部署人员或者管理员获取相应的数据库连接串，例如：
 
 ```sql
-obclient  -h100.88.xx.xx -uroot@test -p****** -P2881 -Doceanbase
+obclient -h100.88.xx.xx -uroot@test -p****** -P2881 -Doceanbase
 ```
 
 数据库连接串包含了访问数据库所需的参数信息，在创建应用程序前，可通过数据库连接串验证登录数据库，保证连接串参数信息正确。
@@ -25,102 +25,24 @@ obclient  -h100.88.xx.xx -uroot@test -p****** -P2881 -Doceanbase
 参数说明：
 
 * **-h**：OceanBase 数据库连接 IP，有时候是一个 ODP 地址。
-* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直接连接数据库时不填集群名称，通过 ODP 连接时需要填写。
+* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 `sys`，租户的默认管理员用户是 `root`。直接连接数据库时不填集群名称，通过 ODP 连接时需要填写。
 * **-p**：用户密码。
 * **-P**：OceanBase 数据库连接端口，也是 ODP 的监听端口。
 * **-D**：需要访问的数据库名称。
 
-### 步骤二：安装 OceanBase Connector/C 驱动
+### 步骤二：安装 MySQL Connector/C 驱动
 
-#### 通过 rpm 安装
+#### 通过 yum 安装 mariadb client
 
-获取 [OceanBase Connector/C](https://mirrors.aliyun.com/oceanbase/community/stable/el/7/x86_64/libobclient-2.2.1-2.el7.x86_64.rpm) 安装包（即 LibOBClient）和 [obclient](https://mirrors.aliyun.com/oceanbase/community/stable/el/7/x86_64/obclient-2.2.0-6.el7.x86_64.rpm) 安装包。更多版本的安装包，请参考 [镜像站](https://mirrors.aliyun.com/oceanbase/community/stable/el/) ，根据自身的系统版本在镜像库中找到需要的安装包。
+1. 安装 mariadb client。
 
-1. 安装 LibOBClient。
-
-   ```bash
-   sudo rpm -ivh libobclient-xx.x86_64.rpm
+   ```shell
+   sudo yum install mariadb-devel
    ```
-
-2. 安装 obclient。
-
-   ```bash
-   sudo rpm -ivh obclient-xx.x86_64.rpm
-   ```
-
-<main id="notice" type='explain'>
-  <h4>说明</h4>
-  <p>由于 OBClient 依赖于 LibOBClient，所以需要先安装 LibOBClient。 </p>
-</main>
-
-#### 从源码编译
-
-OceanBase 数据库的 Github 仓库提供的最新开发版本的源代码（包含子库 LibOBClient），参见  [obclient](https://github.com/oceanbase/obclient)。
-
-1. 安装依赖工具。
-
-   ```bash
-   sudo yum install -y git cmake gcc make openssl-devel ncurses-devel rpm-build  gcc-c++ bison bison-devel zlib-devel gnutls-devel libxml2-devel openssl-devel \
-   libevent-devel libaio-devel
-   ```
-
-2. 代码编译及打包
-
-   1. 下载 [obclient 源代码](https://github.com/oceanbase/obclient)（包含子库）。
-
-         ```bash
-         git clone --recurse-submodules https://github.com/oceanbase/obclient 
-         cd obclient
-         ```
-
-   2. 执行 LibOBClient 编译。
-
-         ```bash
-         cd obclient/libmariadb
-         sh build.sh
-         ```
-
-   3. 打包 LibOBClient 的 RPM 安装包。
-
-         ```bash
-         cd rpm
-         sh libobclient-build.sh
-         ```
-
-   4. 执行 OBClient 编译。
-
-         ```bash
-         #回到 OBClient 目录
-         cd ../..  
-         sh build.sh
-         ````
-
-   5. 打包 OBClient 的 RPM 安装包。
-
-         ```bash
-         cd rpm
-         sh obclient-build.sh
-         ```
-
-3. 安装 LibOBClient 和 obclient。
-
-   ```bash
-   cd obclient/libmariadb/rpm
-   sudo rpm -ivh libobclient-xx.x86_64.rpm
-   
-   # obclient/rpm 目录
-   cd ../../rpm 
-   sudo rpm -ivh obclient-xx.x86_64.rpm
-   ```
-
-   <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>由于 OBClient 依赖于 LibOBClient，所以需要先安装 LibOBClient。 </p>
-   </main>
 
 ### 步骤三：编写应用程序
 
-应用程序通过 OceanBase Connector/C 与数据库服务器 OBServer 节点交互的基本方式如下：
+应用程序通过 MySQL Connector/C 与数据库服务器 OBServer 节点交互的基本方式如下：
 
 1. 调用 `mysql_library_init()` 初始化 MySQL 库。
 
@@ -184,8 +106,8 @@ int main(int argc, char** argv)
 {
   mysql_library_init(0, NULL, NULL);
   MYSQL *mysql = mysql_init(NULL);
-  char* host_name = "172.xx.xx.xx";//set your mysql host
-  char* user_name = "r***"; //set your user_name
+  char* host_name = "xxx.xxx.xxx.xxx";//set your mysql host
+  char* user_name = "******"; //set your user_name
   char* password = "******"; //set your password
   char* db_name = "test"; //set your databasename
   int port_num = 2883; //set your mysql port
@@ -279,9 +201,9 @@ int main(int argc, char** argv)
 
 * **host_name**：取自 `-h` 参数，OceanBase 数据库连接地址，有时候是 ODP 地址。
 
-* **user_name**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 ODP 连接时需要填写。
+* **user_name**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 `root`。直连数据库时不填写集群名称，通过 ODP 连接时需要填写。
 
-* **password**：取自 `-p` 参数，用户密码 。
+* **password**：取自 `-p` 参数，用户密码。
 
 * **db_name**：取自 `-D` 参数，需要访问的数据库名称。
 
@@ -289,35 +211,37 @@ int main(int argc, char** argv)
 
 ### 步骤四：运行应用程序
 
-代码编辑完成后，可以通过如下命令进行编译：
+1. 代码编辑完成后，可以通过如下命令进行编译。
 
-<main id="notice" type='explain'>
-  <h4>说明</h4>
-  <p>obclient 安装的默认路径为 <code>/u01/obclient</code>。   </p>
-</main>
+    ```shell
+    g++ -I/usr/include/mysql/ -L/usr/lib64/mysql/ -lmysqlclient mysql_test.c -o mysql_test
+    ```
 
-```bash
-g++ -I/u01/obclient/include/ -L/u01/obclient/lib -lobclnt mysql_test.c -o mysql_test
-```
+    选项说明：
 
-编译完成后，通过如下命令运行应用程序：
+    * `-I` 选项：指定编译器的搜索路径，以便让编译器能够找到头文件。例如将 `mysql.h` 头文件所在的目录 `/usr/include/mysql` 添加到编译器的搜索路径中，使编译器能够找到 `mysql.h` 头文件。可以使用 `find / -name mysql.h 2>/dev/null` 这个命令查找 `mysql.h` 文件路径。
+    * `-L` 选项：指定动态链接库的搜索路径。
+    * `-l` 选项：指定需要链接的库文件。使用 `-l` 选项时，库文件名应该去掉 `lib` 前缀和 `.so` 后缀，例如上面的命令中库文件名为 `libmysqlclient.so`，但是使用 -l 选项时只需要指定 `mysqlclient`。
 
-```bash
-#指定运行路径
-export LD_LIBRARY_PATH=/u01/obclient/lib
+2. 指定运行路径。
 
-#运行
-./mysql_test
+    ```shell
+    export LD_LIBRARY_PATH=/usr/lib64/mysql
+    ```
 
-#输出如下结果，说明数据库连接成功，示例语句正确执行。
----------------------
-id      name
----------------------
-20      hangzhou
-20      shanghai
----------------------
-```
+3. 通过如下命令运行应用程序。
 
-## 更多信息
+    ```shell
+    ./mysql_test
+    ```
 
-关于 OceanBase Connector/C 的详细安装和使用信息，请参考文档 《[OceanBase Connector/C 开发者指南](https://www.oceanbase.com/docs/community/connector-c-cn/V1.0.0/10000000000017244)》。
+    输出如下结果，说明数据库连接成功，示例语句正确执行。
+
+    ```shell
+    ---------------------
+    id      name
+    ---------------------
+    20      hangzhou
+    20      shanghai
+    ---------------------
+    ```
