--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/7.subplan-filter.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/7.subplan-filter.md
@@ -2,7 +2,7 @@
 
 `SUBPLAN FILTER` 算子用于驱动表达式中的子查询执行。
 
-OceanBase 数据库以 `NESTED LOOP` 算法执行 `SUBPLAN FILTER` 算子，执行时左边取一行数据，然后执行右边的子计划。`SUBPLAN FILTER` 算子可以驱动相关子查询和非相关子查询计算，并且两种执行方式不同。
+OceanBase 数据库以 `NESTED LOOP` 算法执行 `SUBPLAN FILTER` 算子，执行时左边取一行数据，然后执行右边的子计划。`SUBPLAN FILTER` 算子可以驱动非相关子查询和相关子查询计算，并且两种执行方式不同。
 
 ## 驱动非相关子查询计算
 
