--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/3.distributed-execution-plan/2.generation-of-distributed-plans.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/3.distributed-execution-plan/2.generation-of-distributed-plans.md
@@ -78,6 +78,7 @@ Outputs & filters:
 二阶段聚合操作如下例所示：
 
 ```sql
+obclient> EXPLAIN SELECT SUM(v1) FROM t2 GROUP BY v2\G
 | ============================================================
 |ID|OPERATOR                     |NAME    |EST. ROWS|COST  |
 ------------------------------------------------------------
