--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/4.sql-performance-analysis-example/5.query-sql-traffic-and-query-the-qps.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/4.sql-performance-analysis-example/5.query-sql-traffic-and-query-the-qps.md
@@ -1,6 +1,6 @@
 # 查询 SQL 流量分布情况及 QPS
 
-运行如下语句可以查询 SQL 流量分布情况及 QPS：
+某些场景下可能会发生节点间负载不均衡而产生性能瓶颈，可以运行如下语句可以查询 SQL 流量在各 OBServer 节点间的分布情况及 QPS：
 
 ```sql
 obclient> SELECT/*+ PARALLEL(15)*/t2.zone, t1.svr_ip,  COUNT(*) AS RPC_COUNT,
