v410-zishao-broken-link-fix-0602-2

--- a/en-US/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/2.create-an-index-of-mysql-mode.md
+++ b/en-US/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/2.create-an-index-of-mysql-mode.md
@@ -150,7 +150,7 @@ Note the following limits when you create a SPATIAL index:
    For more information about SRID, see [SRS](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/2.spacial-reference-system-of-mysql-mode.md).
 
 * You can create a SPATIAL index only on columns of spatial data types. 
-  <!-- For more information about the supported spatial data types, see [Overview](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md). -->
+  For more information about the supported spatial data types, see [Overview](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md).
 
 * You can create a SPATIAL index only on columns that have the `NOT NULL` constraint.
 
