--- a/en-US/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md
+++ b/en-US/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md
@@ -24,7 +24,7 @@ To add zones to the cluster and change the tenant locality, perform the followin
 
    <main id="notice" type='explain'>
    <h4>Note</h4>
-   <p>To add tenant resources after zones are added, you can increase the usage scope of the tenant resource pool by setting the ZONE_LIST parameter or creating a new resource pool and allocating the resource pool to the tenant. The following example describes how to create a new resource pool and allocate it to the tenant. For more information about how to set the ZONE_LIST parameter, see <a href="../../../../2.basic-database-management/4.manage-tenants/9.../../../../2.basic-database-management/4.manage-tenants/13.modify-the-resource-configuration-of-a-tenant.md">Modify the resource configurations of a tenant</a>. </p>
+   <p>To add tenant resources after zones are added, you can increase the usage scope of the tenant resource pool by setting the ZONE_LIST parameter or creating a new resource pool and allocating the resource pool to the tenant. The following example describes how to create a new resource pool and allocate it to the tenant. For more information about how to set the ZONE_LIST parameter, see <a href="../../../../2.basic-database-management/4.manage-tenants/13.modify-the-resource-configuration-of-a-tenant.md">Modify the resource configurations of a tenant</a>. </p>
    </main>
 
    1. Create a resource unit and a resource pool.
