--- a/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/15.subplan-scan.md
+++ b/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/15.subplan-scan.md
@@ -40,7 +40,7 @@ Outputs & filters:
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>The <code>LIMIT</code> operator can be used only in SQL queries in MySQL mode. For more information, see <a href="../2.execution-plan-operator/12.LIMIT.md">LIMIT</a>. </p>
+    <p>The <code>LIMIT</code> operator can be used only in SQL queries in MySQL mode. For more information, see <a href="../2.execution-plan-operator/12.limit.md">LIMIT</a>. </p>
   </main>
 
 In the preceding example, the `outputs & filters` section in the execution plan display of query Q1 shows in detail the output information of the `SUBPLAN SCAN` operator.
