--- a/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/23.exchange.md
+++ b/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/23.exchange.md
@@ -176,7 +176,7 @@ Outputs & filters:
       access([S.C1], [S.C2]), partitions(p[0-3])
 ```
 
-The `PX PARTITION ITERATO` operator iterates data at the partition level. For more information, see [GI](../2.execution-plan-operator/24.GI.md).
+The `PX PARTITION ITERATO` operator iterates data at the partition level. For more information, see [GI](../2.execution-plan-operator/24.gi.md).
 
 In the preceding example, the `outputs & filters` section in the execution plan display shows in detail the output information of the `EXCH-IN/OUT (HASH)` operators.
 
