--- a/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/3.join.md
+++ b/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/3.join.md
@@ -49,7 +49,7 @@ Outputs & filters:
       access([T2.D2]), partitions(p0)
 ```
 
-The `MATERIAL` operator materializes the data output of subsequent operators. For more information, see [MATERIAL](../2.execution-plan-operator/10.MATERIAL.md).
+<!-- The `MATERIAL` operator materializes the data output of subsequent operators. For more information, see [MATERIAL](../2.execution-plan-operator/10.MATERIAL.md). -->
 
 ```sql
 Q2:
