--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/8.alter-system-flush-plan-cache-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/8.alter-system-flush-plan-cache-of-oracle-mode.md
@@ -6,7 +6,7 @@ You can use this statement to flush a plan cache.
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>To flush the plan cache of a specified SQL statement or schema under an Oracle tenant, you need to use the <a href="../../../../3.pl-reference/4.pl-system-package/12.DBMS_PLAN_CACHE/1.dbms_plan_cache-overview.md">DBMS_PLAN_CACHE</a> system package. </p>
+    <p>To flush the plan cache of a specified SQL statement or schema under an Oracle tenant, you need to use the <a href="../../../../3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/125.dbms-plan-cache-oracle/1.dbms-plan-cache-overview-oracle.md">DBMS_PLAN_CACHE</a> system package. </p>
   </main>
 
 ## Syntax
