--- a/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/93.dbms-lob-oracle/7.eraese-oracle.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/93.dbms-lob-oracle/7.eraese-oracle.md
@@ -52,7 +52,7 @@ Usage notes:
 
 <main id="notice" type='notice'>
     <h4>Notice</h4>
-    <p>If only part of the <code>LOB</code> is erased, the length of the <code>LOB</code> will not be smaller. For information about how to shorten the <code>LOB</code>, see <a href="15.TRIM.md">TRIM</a>. </p>
+    <p>If only part of the <code>LOB</code> is erased, the length of the <code>LOB</code> will not be smaller. For information about how to shorten the <code>LOB</code>, see <a href="15.trim-oracle.md">TRIM</a>. </p>
   </main>
 
 Exceptions
