--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/4.view-dump-information.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/4.view-dump-information.md
@@ -53,11 +53,11 @@ After you initiate a minor compaction, you can query the minor compaction progre
 
    * `ESTIMATED_FINISH_TIME`: the estimated completion time.
 
-   <!-- For more information about fields in the `GV$OB_TABLET_COMPACTION_PROGRESS` view, see [GV$OB_TABLET_COMPACTION_PROGRESS](../../../../5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/11.gv-ob_tablet_compaction_progress-of-mysql-mode.md). -->
+   For more information about fields in the `GV$OB_TABLET_COMPACTION_PROGRESS` view, see [GV$OB_TABLET_COMPACTION_PROGRESS](../../../../5.system-reference/4.system-overview-of-mysql-mode/3.performance-view-of-mysql-mode/11.gv-ob_tablet_compaction_progress-of-mysql-mode.md).
 
    If a tablet does not appear in this view or the minor compaction remains unfinished for a tablet after a long period of time, you can query the `GV$OB_COMPACTION_DIAGNOSE_INFO` view to verify whether an exception occurs.
 
-   <!-- For more information about fields in the `GV$OB_COMPACTION_DIAGNOSE_INFO` view, see [GV$OB_COMPACTION_DIAGNOSE_INFO](../../../../5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/2.gv-ob_compaction_diagnose_info-of-mysql-mode.md). -->
+   For more information about fields in the `GV$OB_COMPACTION_DIAGNOSE_INFO` view, see [GV$OB_COMPACTION_DIAGNOSE_INFO](../../../../5.system-reference/4.system-overview-of-mysql-mode/3.performance-view-of-mysql-mode/2.gv-ob_compaction_diagnose_info-of-mysql-mode.md).
 
 
 ## View the minor compaction history
