v410-zishao-broken-link-fix-0602-3

--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/14.single-machine-deployment-online-to-distributed.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/14.single-machine-deployment-online-to-distributed.md
@@ -269,6 +269,6 @@ Perform the following steps separately on two servers.
 
 * [Connect to an OceanBase Database tenant by using OBClient](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)
 * [ALTER SYSTEM ... ZONE](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/25.zone.md)
-* [ALTER SYSTEM ... SERVER](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/20.SERVER.md)
+* [ALTER SYSTEM ... SERVER](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/20.server.md)
 * [ALTER RESOURCE POOL](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)
 * [ALTER TENANT](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/5.alter-tenant.md)
