--- a/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/2.join-algorithm.md
+++ b/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/2.join-algorithm.md
@@ -208,7 +208,7 @@ NESTED LOOP JOIN has two variants:
    3 - output([t1.c1]), filter(nil), access([t1.c1]), partitions(p0)
    ```
 
-   In the `outputs & filters` section, parameter `[t2.c1]` of `nl_param` indicates the execution of conditional pushdown optimization. For more information, see [JOIN](../../../2.sql-execution-plan/2.execution-plan-operator/3.JOIN.md).
+   In the `outputs & filters` section, parameter `[t2.c1]` of `nl_param` indicates the execution of conditional pushdown optimization. For more information, see [JOIN](../../../2.sql-execution-plan/2.execution-plan-operator/3.join.md).
 
    In most cases of query optimization, the OceanBase Database optimizer prioritizes the INDEX NESTED LOOP JOIN algorithm before it uses the BATCH NESTED LOOP JOIN algorithm. These two algorithms can be used together. The NESTED LOOP JOIN algorithm is used as the final option.
 
