--- a/en-US/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/6.create-procedure-mysql.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/6.create-procedure-mysql.md
@@ -30,7 +30,7 @@ routine_body:
 
 By default, stored procedures are associated with the default database. To associate a stored procedure with a specified database, use `database_name.sp_name` to specify the database name.
 
-To call a stored procedure, use the `CALL` statement. For more information, see [CALL](../5.pl-manipulation-statement-mysql/1.CALL-mysql.md).
+To call a stored procedure, use the `CALL` statement. For more information, see [CALL](../5.pl-manipulation-statement-mysql/1.call-mysql.md).
 
 To use the `CREATE PROCEDURE` statement, you must have the `CREATE PROCEDURE` privilege. By default, OceanBase Database automatically grants the `ALTER ROUTINE` and `EXECUTE` privileges to the creator of a stored routine such as a stored procedure or a stored function. If the `DEFINER` clause is used, the required privileges depend on the value of `user`.
 
