v410-Chinese-character-fix-0602

--- a/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/8.create-user-optional.md
+++ b/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/8.create-user-optional.md
@@ -54,5 +54,5 @@ To create a user and grant the sudo permission to the user, follow these steps:
    For example, the following output is returned:
 
    ```shell
-   drwxr-xr-x 2 admin admin 4096 2 月 9 18:43 .
-   drwxr-xr-x 2 admin admin 4096 2 月 9 18:43 log1
+   drwxr-xr-x 2 admin admin 4096 Feb. 9 18:43 .
+   drwxr-xr-x 2 admin admin 4096 Feb. 9 18:43 log1
