--- a/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
+++ b/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
@@ -8,7 +8,7 @@ You can deploy OceanBase Database Community Edition in the following ways:
 
 ## Quick deployment
 
-* For non-natively supported operating systems such as macOS and Windows, we recommend that you deploy the database by using a Docker image. For more information, see “Solution 3: Deploy OceanBase Database in a container” in [Get started with OceanBase Database](../../2.quickstart/1.quickly-experience-oceanbase-for-community.md).
+* For non-natively supported operating systems such as macOS and Windows, we recommend that you deploy the database by using a Docker image. For more information, see "Solution 3: Deploy OceanBase Database in a container" in [Get started with OceanBase Database](../../2.quickstart/1.quickly-experience-oceanbase-for-community.md).
 
 * For natively supported operating systems such as Linux, we recommend that you deploy the database by using OceanBase Deployer (OBD) with a few clicks. For more information, see "Solution 1" and "Solution 2" in [Get started with OceanBase Database](../../2.quickstart/1.quickly-experience-oceanbase-for-community.md).
 
