--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/6.isolation-a-node.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/6.isolation-a-node.md
@@ -32,7 +32,7 @@ The precheck for the `STOP SERVER` command is strict to ensure that any actions 
 
 Limitations of the `STOP SERVER` command are as follows:
 
-1. You cannot stop nodes in multiple zones at the same time. If you stop nodes in multiple zones at the same time or a node in another zone is already stopped, the error `-4660，cannot stop server or stop zone in multiple zones` is returned. In this case, you can query the `DBA_OB_SERVERS` and `DBA_OB_ZONES` views to check whether nodes in multiple zones are stopped.
+1. You cannot stop nodes in multiple zones at the same time. If you stop nodes in multiple zones at the same time or a node in another zone is already stopped, the error `-4660,cannot stop server or stop zone in multiple zones` is returned. In this case, you can query the `DBA_OB_SERVERS` and `DBA_OB_ZONES` views to check whether nodes in multiple zones are stopped.
 
 2. The `STOP SERVER` command will check the Paxos member lists of all log streams in all tenants to verify whether the replicas on the remaining nodes, except for the target node and other unavailable nodes, are still the majority in the Paxos group. If the replicas on the remaining nodes are not the majority, you cannot perform the Stop Server operation.
 
