--- a/en-US/9.release-notes/102.community-edition-history-release/100.V4.0/99.V4.0.0.md
+++ b/en-US/9.release-notes/102.community-edition-history-release/100.V4.0/99.V4.0.0.md
@@ -399,7 +399,7 @@ Tested version
 
    * The __all_virtual_core_meta_table table is a virtual table. It displays the location of the replicas of the __all_core_table table of the sys tenant. The table_id, partition_id, and partition_cnt fields are deleted, and the ls_id field is added in OceanBase Database Community Edition V4.0.
 
-<!-- For more information about the views, see [System views (MySQL mode)](../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/1.overview-of-mysql-mode.md) and [System views (Oracle mode）](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/1.overview-of-oracle-mode.md) -->
+<!-- For more information about the views, see [System views (MySQL mode)](../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/1.overview-of-mysql-mode.md) and [System views (Oracle mode)](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/1.overview-of-oracle-mode.md) -->
 
 ### Parameter changes
 
