--- a/en-US/6.manage/2.tenant-management/6.common-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/en-US/6.manage/2.tenant-management/6.common-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -1,24 +1,24 @@
 # Modify system variables of a tenant
 
-You can set system variables to ensure that the behaviors of OceanBase Database meet the service requirements. This topic describes how to modify system variables of a tenant.
+Setting system variables can help OceanBase Database behave according to business requirements. This topic describes how to modify system variables of a tenant.
 
 You can use the `SET` statement to modify system variables of a tenant.
 
-* A session variable takes effect only on the current session.
-* A global variable does not take effect on the current session and takes effect only on sessions established upon re-logon.
+* Setting a session variable takes effect only for the current session, not for other sessions.
+* Setting a global variable does not take effect for the current session and requires logging on again to create a new session before taking effect.
 
   <main id="notice" type='notice'>
    <h4>Notice</h4>
-   <p>To set global variables, you must have the SUPER or ALTER SYSTEM privilege. </br>Ensure you have the required privileges before you set global variables. For more information about user privileges, see <a xref="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md">Overview</a>. </p>
+   <p>Setting a global variable requires the SUPER or ALTER SYSTEM privilege. </br>Ensure that you have the required privileges before setting a global variable. </p>
   </main>
 
-In the following examples, the `ob_query_timeout` system variable specifies the timeout period for SQL queries, in microseconds. When you run a big data query, you can increase the value of the `ob_query_timeout` system variable to avoid an execution failure caused by query timeout.
+The system variable `ob_query_timeout` in the following example is used to set the timeout period for SQL queries in microseconds. When performing big data queries, you can increase the value of `ob_query_timeout` to avoid query timeout and execution failure.
 
 ## Modify a session-level system variable
 
 1. Log on to a user tenant of the cluster as the root user.
 
-   To log on to the `mq_t1` tenant, run the following command:
+   The following command uses the `mq_t1` tenant as an example:
 
    ```shell
    obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
@@ -55,17 +55,17 @@ In the following examples, the `ob_query_timeout` system variable specifies the 
    1 row in set
    ```
 
-## Modify a global system variable
+## Modify a global-level system variable
 
 1. Log on to a user tenant of the cluster as the root user.
 
-   To log on to the `mq_t1` tenant, run the following command:
+   The following command uses the `mq_t1` tenant as an example:
 
    ```shell
    obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
    ```
 
-2. Query the global variables of the tenant.
+2. Query the global-level system variables of the tenant.
 
    ```shell
    obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE  'ob_query_timeout';
@@ -77,7 +77,7 @@ In the following examples, the `ob_query_timeout` system variable specifies the 
    1 row in set
    ```
 
-3. Execute the `SET` statement to modify the value of a global variable.
+3. Execute the `SET` statement to modify the value of a global-level system variable.
 
    ```shell
    obclient [oceanbase]> SET GLOBAL ob_query_timeout = 20000000;
@@ -98,7 +98,7 @@ In the following examples, the `ob_query_timeout` system variable specifies the 
 
 ## Modify a Boolean variable
 
-You can modify the value of a Boolean variable queried by using the `SHOW VARIABLES` statement in the following ways:
+Use the `SHOW VARIABLES` statement to modify the value of a Boolean variable in the following ways:
 
 ```sql
 SET foreign_key_checks = ON;
@@ -112,7 +112,7 @@ SET GLOBAL foreign_key_checks = 0;
 
 <main id="notice" type='explain'>
  <h4>Note</h4>
- <p>The ON/OFF, TRUE/FALSE, and 1/0 values are equivalent. </p>
+ <p>Setting Boolean variables using the three methods of ON/OFF, TRUE/FALSE, or 1/0 are equivalent. </p>
 </main>
 
 ## More information
