--- a/en-US/6.manage/2.tenant-management/6.common-tenant-operations/9.modify-resource-pool-properties.md
+++ b/en-US/6.manage/2.tenant-management/6.common-tenant-operations/9.modify-resource-pool-properties.md
@@ -1,33 +1,33 @@
-# Modify attributes of a resource pool
+# Modify the attributes of a resource pool
 
-You can modify the `UNIT`, `UNIT_NUM`, and `ZONE_LIST` attributes of a resource pool. This topic describes the modification procedure.
+Modifying the attributes of a resource pool involves adjusting parameters such as `UNIT`, `UNIT_NUM`, and `ZONE_LIST`. This topic describes the modification procedure.
 
-You can use the `ALTER RESOURCE POOL` statement to modify attributes of a resource pool.
+You can use the `ALTER RESOURCE POOL` statement to modify the attributes of a resource pool.
 
-You can scale up or down a tenant by modifying the attributes of its resource pool. For example, you can increase the value of `UNIT_NUM` to increase the number of nodes in each zone to scale out the tenant.
+Modifying the attributes of a resource pool is another way to scale up or down a tenant. For example, you can increase the value of `UNIT_NUM` to increase the number of nodes in each zone to achieve scaling up.
 
 <main id="notice" type='explain'>
  <h4>Note</h4>
- <p>You cannot decrease the values of resource items in the resource pool in the current version. </p>
+ <p>Currently, the values of the parameters related to resource pool attributes cannot be decreased. </p>
 </main>
 
 ## Procedure
 
-1. Log on to the sys tenant of the cluster as the root user.
+1. Log on to the `sys` tenant of the cluster as the root user.
 
    ```shell
    obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
    ```
 
-2. Execute the following statement to go to the database named `oceanbase`:
+2. Enter the `oceanbase` database.
 
    ```shell
    obclient [(none)]> USE oceanbase;
    ```
 
-3. Query the `DBA_OB_RESOURCE_POOLS` view for the configuration information about resource pools.
+3. Use the `DBA_OB_RESOURCE_POOLS` view to query the configuration information of a resource pool.
 
-   To query the configuration information about the resource pool named `mq_pool_02`, execute the following statement:
+   The following command uses the `mq_pool_02` resource pool as an example:
 
    ```shell
    obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
@@ -39,13 +39,13 @@ You can scale up or down a tenant by modifying the attributes of its resource po
    1 row in set
    ```
 
-   For more information about the `DBA_OB_RESOURCE_POOLS`view, see [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md).
+   For more information about the `DBA_OB_RESOURCE_POOLS` view, see [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md).
 
-4. Execute the `ALTER RESOURCE POOL` statement to modify the configurations of the resource pool.
+4. Execute the `ALTER RESOURCE POOL` statement to modify the attributes of the resource pool.
 
     <main id="notice" type='notice'>
      <h4>Notice</h4>
-     <p><ul><li>This statement modifies only one attribute at a time. To modify two or more of the <code>UNIT</code>, <code>UNIT_NUM</code>, and <code>ZONE_LIST</code> attributes, execute this statement multiple times. </li><li> When you modify the <code>ZONE_LIST</code> attribute, you can add or remove only one zone at a time. </li></ul></p>
+     <p><ul><li>Only one attribute can be modified in a single statement. If two or more attributes in <code>UNIT</code>, <code>UNIT_NUM</code>, and <code>ZONE_LIST</code> need to be modified at the same time, multiple statements need to be executed separately. </li><li> When modifying the <code>ZONE_LIST</code> attribute, you can add or delete only one zone at a time. </li></ul></p>
     </main>
 
    Syntax:
@@ -65,10 +65,10 @@ You can scale up or down a tenant by modifying the attributes of its resource po
 
       <main id="notice" type='notice'>
       <h4>Notice</h4>
-      <p>If a resource pool is allocated to a tenant, you cannot modify the `UNIT_NUM` attribute. You must use the <code>ALTER RESOURCE TENANT</code> statement to modify it. </p>
+      <p>If a resource pool is allocated to a tenant, the number of resource units cannot be modified using <code>ALTER RESOURCE POOL</code> statement. Use the <code>ALTER RESOURCE TENANT</code> statement instead. </p>
       </main>
 
-   * `ZONE_LIST`: the distribution of the resource pool in zones.
+   * `ZONE_LIST`: the distribution of zones in the resource pool.
 
    For more information about the `ALTER RESOURCE POOL` statement, see [ALTER RESOURCE POOL](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md).
 
@@ -76,9 +76,9 @@ You can scale up or down a tenant by modifying the attributes of its resource po
 
    Example:
 
-   * The resource pool is not allocated to any tenant
+   * If the resource pool is not allocated to any tenant
 
-      To set the unit config to `'S2_unit_config'`, the number of resource units to 3, and `ZONE_LIST` to `'zone1','zone2','zone3'` for the `mq_pool_02` tenant, execute the following statements:
+      Set `UNIT` to `'S2_unit_config'`, `UNIT_NUM` to 3, and `ZONE_LIST` to `'zone1','zone2','zone3'` for the `mq_pool_02` resource pool:
 
       ```shell
       obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT='S2_unit_config';
@@ -91,11 +91,9 @@ You can scale up or down a tenant by modifying the attributes of its resource po
       Query OK, 0 rows affected
       ```
 
-   * The resource pool is allocated to a tenant
-
-      You must use the `ALTER RESOURCE TENANT` statement to modify the `UNIT_NUM` attribute of a resource pool allocated to a tenant.
-
-      To set the unit config to `'S2_unit_config'`, the number of resource units to 3, and `ZONE_LIST` to `'zone1','zone2','zone3'` for the `mq_pool_02` tenant, execute the following statements:
+   * If the resource pool is allocated to a tenant
+      
+      Set `UNIT` to `'S2_unit_config'`, `UNIT_NUM` to 3, and `ZONE_LIST` to `'zone1','zone2','zone3'` for the `mq_pool_02` resource pool. Note that `UNIT_NUM` must be modified using the `ALTER RESOURCE TENANT` statement.
 
       ```shell
       obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT='S2_unit_config';
