--- a/zh-CN/1.users-guide/10.high-data-availability/2.backup-and-recovery-management/4.data-recovery/1.preparations-before-recovery.md
+++ b/zh-CN/1.users-guide/10.high-data-availability/2.backup-and-recovery-management/4.data-recovery/1.preparations-before-recovery.md
@@ -60,11 +60,11 @@
 7. （可选）设置恢复的密码。
 
    ```sql
-   obclient> SET DECRYPTION IDENTIFIED BY 'password';
+   obclient> SET DECRYPTION IDENTIFIED BY '******';
    ```
 
    只有在备份时添加了密码的场景下才需要设置恢复的密码。同时如果全量备份 + 增量备份设置的密码不一样，则需要输入多个密码，密码之间使用逗号分隔。示例如下：
 
    ```sql
-   obclient> SET DECRYPTION IDENTIFIED BY 'password1'，'password2';
+   obclient> SET DECRYPTION IDENTIFIED BY '******'，'******';
    ```
