--- a/zh-CN/1.users-guide/3.installation-and-deployment/16.deploy-ob-in-kubernetes-via-ob-operator.md
+++ b/zh-CN/1.users-guide/3.installation-and-deployment/16.deploy-ob-in-kubernetes-via-ob-operator.md
@@ -296,13 +296,13 @@ obproxy-service   NodePort   xxx.xxx.xxx.xxx   <none>        2883:30083/TCP,2884
 obclient -hxxx.xxx.xxx.xxx -P2883 -uroot@sys oceanbase -A -c
 
 # use clusterip with password
-obclient -hxxx.xxx.xxx.xxx -P2883 -uroot@sys -p oceanbase -A -c
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot@sys -p****** oceanbase -A -c
 
 # using nodeport without password
 obclient -h<node_ip> -P30083 -uroot@sys oceanbase -A -c
 
 # using nodeport with password
-obclient -h<node_ip> -P30083 -uroot@sys -p oceanbase -A -c
+obclient -h<node_ip> -P30083 -uroot@sys -p****** oceanbase -A -c
 ```
 
 ## 监控 OceanBase 数据库
